--- a/index.css
+++ b/index.css
@@ -1,91 +1,75 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
 body{
-    background-image: url('./weather-background.jpg');
-}
-
-.container{
-    width: 600px;
-    margin: 100px auto;
-    padding: 40px;
-}
-
-.inputs{
-    padding: 2rem 0 2rem 0;
-    text-align: center;
+    display: flex;
     justify-content: center;
-    background: rgb(224, 190, 190);
-    height: 150px;
+    align-items: center;
+    height: 100vh;
+    margin: 0;
+    background: #222;
+    font-family: 'Lato', sans-serif;
+    font-family: 'Martel Sans', sans-serif;
+    font-family: 'Oswald', sans-serif;
+    background-image: url('https://source.unsplash.com/random/1600x900/?landscape');
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
-.inputs input[type="text"]
-{
-    height: 4rem;
-    width: 20rem;
-    background: #212121;
-    font-weight: bold;
-    padding: 10px;
-    border: none;
-    background-color: transparent;
-    border: 2px solid #473939;
-    border-radius: 3px;
-    margin-right: 4px;
-}
-
-.inputs input[type="submit"]
-{
-    height: 3rem;
-    width: 6rem;
-    background: #270aca;
-    font-weight: bold;
+.card{
+    background: #000000d0;
     color: white;
-    font-size: 1rem;
-    margin-top: 20px;
+    padding: 2em;
+    border-radius: 30px;
+    width: 100%;
+    max-width: 420px;
+    margin: 1em;
+}
+
+.search{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+button{
+    margin: 0.5em;
+    border-radius: 50%;
     border: none;
-    border-radius: 4px;
-}
-
-.display{
-    text-align: center;
-    width: 520px;
-    color: #16a864;
-}
-
-.wrapper{
-    margin: 0 9rem;
-    background-color: rgb(172,189,221);
-    height: 45vh;
-    margin: 50px auto;
-    border-radius: 2px;
-}
-
-.wrapper h2{
-    padding: 5px 0;
-    text-align: center;
-    background: #0548b5;
+    height: 46px;
+    width: 46px;
+    outline: none;
+    background: #7c7c7c2b;
     color: white;
+    cursor: pointer;
+    transition: 0.2s ease-in-out;
 }
 
-.wrapper p{
-    margin: 20px 50px;
-    margin-right: 20px;
-    text-align: left;
-    color: #04214c;
-    font-size: 23px;
+input.search-bar{
+    border: none;
+    outline: none;
+    padding: 0.5em 1em;
+    border-radius: 24px;
+    background: #7c7c7c2b;
+    color: white;
+    font-family: inherit;
+    font-size: 120%;
+    width: calc(100% - 100px);
 }
 
-.wrapper h2 span
-{
-    font-size: 26px;
-    color: #9beefb;
+button:hover{
+    background: #7c7c7c6b;
 }
 
-.wrapper p span
-{
-    color: #5e0df4;
-    font-size: 25px;
+.weather.loading{
+     visibility: hidden;
+     max-height: 20px;
+     position: relative;
+}
+
+.weather.loading::after{
+    visibility: visible;
+    content: "loading....";
+    color: white;
+    position: absolute;
+    top: 0;
+    left: 20px;
+    
 }
